Fix welcome title alignment on  📱 screens

--- a/res/scss/index.scss
+++ b/res/scss/index.scss
@@ -48,15 +48,18 @@ $common_transition_timing: 0.3s;
 
 
 // Mobile Devices
-@media only screen and (max-width: 480px) {
+@media only screen and (max-width: 768px) {
 	body {
 		.welcome-box {
+			width: 100%;
+
 			.welcome-title {
 				margin-top: 5vh;
 				text-align: center;
 			}
 
 			.title-text {
+				text-align: center;
 				letter-spacing: 1vw;
 				font-weight: bold;
 				text-shadow: 4px 4px 8px black;
